# 24-03-2022
Modifica file Index.php, aggiunta di Bootstrap + Statistiche del sito
TODO testare se popolando le tabella, nella Home Page viene generata la tabella del top Utenti.

# 04-04-2022
include './utilities/databaseSetup.php'; ora fa tutto il lavoro della connessione al db, basta 
importare questa stringa di codice.

# 10-04-2022
Aggiornare alla versione di PHP 8! Alcuni metodi hanno cambiato nome dalla v7 --> v8
Aggiunto sistema di redirect dopo il login, alla pagina "chiamante" tramite metodo GET["redirect"]
Guardare esempio in /user/ModificaProfilo.php

# 11-04-2022
Creato il Navbar generale, da importare per ogni pagina del sito (Attenzione: Bisogna attivare la session!).
TODO: Modificare il file Conferenze.php rendendo la "C" minuscola! [DONE]

# 14-04-2022
Aggiornato la pagina dei dettagli di una Conferenza, aggiunto pagina per la creazione dei una conferenza
accessibile solo agli amministratori.
TODO: FARE la pagina della creazione di una conferenza.
TODO: Gestire il caso in cui un utente accede a "dettagli.php" senza parametri o con parametri errati.

# 15-04-2022
Creato pagine 404 e 403, sistemato il sistema di redirect in caso di pagine riservate.
Creato cartella admin/ dove conterranno tutte le pagine riservate agli admin --> Spostato quindi il file creaConferenza.php

# 20-04-2022
Reso responsive la pagina delle conferenze.
Fixato l'errore della conferenza "Attiva" quando in realtà era già Completata.
Fixato il problema del path al file logo di default.

# 27-04-2022
Sistemato vari bug + creato file imgValidator.js dove c'è la funziona in caso di upload di foto.
Creato pagina errorPage.php da usare solo in caso di errori da gestire indirettamente.
Creato validatore per la Creazione dello Sponsor e anche per pagine di Register.php