@@ -3,3 +3,4 @@
 /.DS_Store
 /utilities/databaseSetup.php
 .vscode
+test.php
