@@ -14,7 +14,7 @@ if (isset($_SESSION['authorized'])) {
 }
 
 // if $_POST is set:
-if (isset($_POST["nome"])) {
+if (isset($_POST["nome"]) && isset($_FILES["logo"])) {
 
     $target_dir = __DIR__ . "/../assets/imgs/sponsor/";
     $targetfinale = $target_dir . basename($_FILES["logo"]["name"]);
@@ -23,27 +23,59 @@ if (isset($_POST["nome"])) {
 
     if (UPLOAD_ERR_OK !== $_FILES["logo"]['error']) {
         //errore nell'upload
+        header('Location: /errorPage.php?error="Errore durante l\'upload!"' . $_FILES["logo"]['error']);
+        exit;
+    }
+
+    include '../utilities/databaseSetup.php';
+
+    // controlliamo se esiste già lo sponsor
+    $sql = 'SELECT 1 FROM Sponsor WHERE Nome=?';
+    $res = $pdo->prepare($sql);
+    $res->bindValue(1, $_POST["nome"]);
+    $res->execute();
+    if ($res->rowCount() == 1) {
+        // Nome Sponsor Già Presente!
+        header('Location: /errorPage.php?error="Sponsor già presente!"');
+        exit;
+    }
+    
+    $logopath = "/assets/imgs/sponsor/default.jpg";
+
+    // UPLOAD FILE
+    $check = getimagesize($_FILES["logo"]["tmp_name"]);
+    if ($check == false || ($imageFileType != "jpg" && $imageFileType != "png" && $imageFileType != "jpeg")) {
+        // non è un img
+        $uploadOk = 0;
     } else {
-        $check = getimagesize($_FILES["logo"]["tmp_name"]);
-        if ($check == false || ($imageFileType != "jpg" && $imageFileType != "png" && $imageFileType != "jpeg")) {
-            // non è un img
-            $uploadOk = 0;
+        if ($_FILES["logo"]["size"] > 400000) {
+            // file troppo grande!
         } else {
-            if ($_FILES["logo"]["size"] > 400000) {
-                // file troppo grande!
+            if (move_uploaded_file($_FILES["logo"]["tmp_name"], $target_dir . $_POST["nome"] . "." . $imageFileType)) {
+                $logopath = "/assets/imgs/sponsor/" . $_POST["nome"] . "." . $imageFileType;
             } else {
-                if (move_uploaded_file($_FILES["logo"]["tmp_name"], $target_dir . $_POST["nome"] . "." . $imageFileType)) {
-                    echo "uploaded";
-                } else {
-                    //errore con l'uploading del file
-                    echo "error";
-                }
+                //errore con l'uploading del file
+                header('Location: /errorPage.php?error="Errore durante il salvataggio del file!"');
+                exit;
             }
         }
     }
-    exit();
-}
 
+    if ($uploadOk == 1) {
+        $sql = 'CALL NuovoSponsor(?, ?)';
+        $res = $pdo->prepare($sql);
+        $res->bindValue(1, $_POST["nome"]);
+        $res->bindValue(2, $logopath);
+        if($res->execute()){
+            echo "Sponsor Creato con successo!<br>Redirecting...";
+            header("Refresh: 0.7; URL=/conferenze.php");
+            exit;
+        }else{
+            header('Location: /errorPage.php?error="Errore Inserimento nel DB."');
+            exit;
+        }
+    }
+}
 
 ?>
 
