@@ -38,6 +38,7 @@ if (isset($_SESSION['authorized'])) {
                                 if (strcmp($_SESSION["role"], "Admin") == 0){
                             ?>
                             <li><a class="dropdown-item" id="creaConferenza" href="/admin/creaConferenza.php">Crea Conferenza</a></li>
+                            <li><a class="dropdown-item" id="creaConferenza" href="/admin/creaSponsor.php">Crea Sponsor</a></li>
                             <li><a class="dropdown-item" id="creaConferenza" href="/admin/sessioneConferenza.php">Modifica Conferenza</a></li>
                             <?php 
                                 }
